i18n: localize generic role labels in duel and extractor fallbacks

--- a/lang/de.json
+++ b/lang/de.json
@@ -418,6 +418,10 @@
   "EnterToSelect": "Enter zum Auswählen",
   "TabToNavigate": "Tab zum Navigieren",
   "TextField": "Textfeld",
+  "RoleButton": "Schaltfläche",
+  "RoleCheckbox": "Kontrollkästchen",
+  "RoleDropdown": "Dropdown",
+  "RoleControl": "Steuerelement",
   "HasCharacters_Format": "hat {0} Zeichen",
   "PositionOf_Format": "{0} von {1}",
   "LabelValue_Format": "{0}: {1}",
