--- a/lang/en.json
+++ b/lang/en.json
@@ -428,6 +428,10 @@
   "EnterToSelect": "Enter to select",
   "TabToNavigate": "Tab to navigate",
   "TextField": "text field",
+  "RoleButton": "button",
+  "RoleCheckbox": "checkbox",
+  "RoleDropdown": "dropdown",
+  "RoleControl": "control",
   "HasCharacters_Format": "has {0} characters",
   "PositionOf_Format": "{0} of {1}",
   "LabelValue_Format": "{0}: {1}",
