--- a/lang/es.json
+++ b/lang/es.json
@@ -416,6 +416,10 @@
   "EnterToSelect": "Enter para seleccionar",
   "TabToNavigate": "Tab para navegar",
   "TextField": "campo de texto",
+  "RoleButton": "botón",
+  "RoleCheckbox": "casilla",
+  "RoleDropdown": "desplegable",
+  "RoleControl": "control",
   "HasCharacters_Format": "tiene {0} caracteres",
   "PositionOf_Format": "{0} de {1}",
   "LabelValue_Format": "{0}: {1}",
