--- a/lang/fr.json
+++ b/lang/fr.json
@@ -416,6 +416,10 @@
   "EnterToSelect": "Entrée pour sélectionner",
   "TabToNavigate": "Tab pour naviguer",
   "TextField": "champ texte",
+  "RoleButton": "bouton",
+  "RoleCheckbox": "case à cocher",
+  "RoleDropdown": "liste déroulante",
+  "RoleControl": "contrôle",
   "HasCharacters_Format": "contient {0} caractères",
   "PositionOf_Format": "{0} sur {1}",
   "LabelValue_Format": "{0} : {1}",
