--- a/lang/it.json
+++ b/lang/it.json
@@ -416,6 +416,10 @@
   "EnterToSelect": "Invio per selezionare",
   "TabToNavigate": "Tab per navigare",
   "TextField": "campo di testo",
+  "RoleButton": "pulsante",
+  "RoleCheckbox": "casella di controllo",
+  "RoleDropdown": "menu a tendina",
+  "RoleControl": "controllo",
   "HasCharacters_Format": "ha {0} caratteri",
   "PositionOf_Format": "{0} di {1}",
   "LabelValue_Format": "{0}: {1}",
