--- a/lang/ja.json
+++ b/lang/ja.json
@@ -416,6 +416,10 @@
   "EnterToSelect": "Enterで選択",
   "TabToNavigate": "Tabで移動",
   "TextField": "テキストフィールド",
+  "RoleButton": "ボタン",
+  "RoleCheckbox": "チェックボックス",
+  "RoleDropdown": "ドロップダウン",
+  "RoleControl": "コントロール",
   "HasCharacters_Format": "{0}文字あります",
   "PositionOf_Format": "{1}件中{0}件目",
   "LabelValue_Format": "{0}: {1}",
