--- a/lang/pl.json
+++ b/lang/pl.json
@@ -429,6 +429,10 @@
   "EnterToSelect": "Enter, aby wybrać",
   "TabToNavigate": "Tab do nawigacji",
   "TextField": "pole tekstowe",
+  "RoleButton": "przycisk",
+  "RoleCheckbox": "pole wyboru",
+  "RoleDropdown": "lista rozwijana",
+  "RoleControl": "kontrolka",
   "HasCharacters_Format": "ma {0} znaków",
   "PositionOf_Format": "{0} z {1}",
   "LabelValue_Format": "{0}: {1}",
