--- a/lang/ru.json
+++ b/lang/ru.json
@@ -429,6 +429,10 @@
   "EnterToSelect": "Enter для выбора",
   "TabToNavigate": "Tab для навигации",
   "TextField": "текстовое поле",
+  "RoleButton": "кнопка",
+  "RoleCheckbox": "флажок",
+  "RoleDropdown": "выпадающий список",
+  "RoleControl": "элемент управления",
   "HasCharacters_Format": "содержит {0} символов",
   "PositionOf_Format": "{0} из {1}",
   "LabelValue_Format": "{0}: {1}",
