--- a/lang/zh-CN.json
+++ b/lang/zh-CN.json
@@ -416,6 +416,10 @@
   "EnterToSelect": "Enter选择",
   "TabToNavigate": "Tab导航",
   "TextField": "文本字段",
+  "RoleButton": "按钮",
+  "RoleCheckbox": "复选框",
+  "RoleDropdown": "下拉列表",
+  "RoleControl": "控件",
   "HasCharacters_Format": "有{0}个字符",
   "PositionOf_Format": "第{0}个，共{1}个",
   "LabelValue_Format": "{0}：{1}",
