--- a/lang/zh-TW.json
+++ b/lang/zh-TW.json
@@ -416,6 +416,10 @@
   "EnterToSelect": "Enter選取",
   "TabToNavigate": "Tab導覽",
   "TextField": "文字欄位",
+  "RoleButton": "按鈕",
+  "RoleCheckbox": "核取方塊",
+  "RoleDropdown": "下拉式選單",
+  "RoleControl": "控制項",
   "HasCharacters_Format": "有{0}個字元",
   "PositionOf_Format": "第{0}個，共{1}個",
   "LabelValue_Format": "{0}：{1}",
