--- a/lang/ko.json
+++ b/lang/ko.json
@@ -416,6 +416,10 @@
   "EnterToSelect": "Enter로 선택",
   "TabToNavigate": "Tab으로 탐색",
   "TextField": "텍스트 필드",
+  "RoleButton": "버튼",
+  "RoleCheckbox": "체크박스",
+  "RoleDropdown": "드롭다운",
+  "RoleControl": "컨트롤",
   "HasCharacters_Format": "{0}글자 있음",
   "PositionOf_Format": "{1}개 중 {0}번째",
   "LabelValue_Format": "{0}: {1}",
