--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -416,6 +416,10 @@
   "EnterToSelect": "Enter para selecionar",
   "TabToNavigate": "Tab para navegar",
   "TextField": "campo de texto",
+  "RoleButton": "botão",
+  "RoleCheckbox": "caixa de seleção",
+  "RoleDropdown": "lista suspensa",
+  "RoleControl": "controle",
   "HasCharacters_Format": "tem {0} caracteres",
   "PositionOf_Format": "{0} de {1}",
   "LabelValue_Format": "{0}: {1}",
